Fix spacing for nested lists

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -197,7 +197,7 @@ ol {
 
 li>ul,
 li>ol {
-    margin-bottom: 0;
+    margin: .5em 0 1.66667em;
 }
 
 hr {
